--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -996,7 +996,7 @@
 											<span class="appointment-delete" data-id="{{item.id}}" data-index="{{i}}">删除</span>
 											{{else if item.status==2}}
 											<span class="see-inf-modal">查看</span>
-											<span>取消预约</span>
+											<span class="cancel-reservation" data-id="{{item.id}}">取消预约</span>
 											{{/if}}
 										</td>
 									</tr>
