[enhancement]修改诊疗预约接口绑定弟子信息id

--- a/wechat/src/main/webapp/xcview/html/physician/reserve_information.html
+++ b/wechat/src/main/webapp/xcview/html/physician/reserve_information.html
@@ -50,6 +50,7 @@
 	<!-- 中间内容开始 -->
 	<div class="main">
 		<script type="text/html" id="main_id">
+			<input type="hidden" value="{{items.apprenticeId}}" id="J_apprenticeId"/>
 		<div class="booking_person">预约人：<span class="booking_person_span">{{items.name}}</span></div>
 		<div class="handler ">
 			<div class="handler_cen handler_time_click">
