中医师--热门医师添加背景

--- a/wechat/src/main/webapp/xcview/html/physician/index.html
+++ b/wechat/src/main/webapp/xcview/html/physician/index.html
@@ -155,7 +155,7 @@
 
 			{{each items as item i}}
 			<div class="batch_main" data-ids="{{item.id}}">
-				<div class="batch_main_bg" style="background-image: url(/xcview/images/switchover_one.png);">
+				<div class="batch_main_bg">
 					<div class="batch_main_img">
 						<img src="{{item.headPortrait}}" alt="" />
 					</div>
