中医师--热门医师-添加默认错误头像。师承-添加弟子福利。删除第一版-文字设置引入，文字类型文件

--- a/wechat/src/main/webapp/xcview/html/physician/index.html
+++ b/wechat/src/main/webapp/xcview/html/physician/index.html
@@ -157,7 +157,7 @@
 			<div class="batch_main" data-ids="{{item.id}}">
 				<div class="batch_main_bg">
 					<div class="batch_main_img">
-						<img src="{{item.headPortrait}}" alt="" />
+						<img src="{{item.headPortrait}}" alt="" onerror="nofind();" />
 					</div>
 					<div class="name">{{item.name}}</div>
 					<div class="center">{{item.title}}</div>
@@ -169,7 +169,7 @@
 			<!--<div class="batch_main">
 				<div class="batch_main_bg" style="background-image: url(/xcview/images/switchover_two.png);">
 					<div class="batch_main_img">
-						<img src="{{items.headPortrait}}" alt="" />
+						<img src="{{items.headPortrait}}" alt="" onerror="nofind();" />
 					</div>
 					<div class="name">{{items.name}}</div>
 					<div class="center">{{items.title}}</div>
