--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -1122,13 +1122,18 @@
 				<img src="/xcview/images/become_disciple.png" alt="" class="become_disciple_img" />
 				<div class="become_disciple_main">
 					<div class="become_disciple_title">如何成为弟子</div>
-
 					<div class="become_disciple_cen_id">
 						<script type="text/html" id="become_disciple_cen_id">
 						<div class="become_disciple_cen">{{items.requirement}}</div>
 						</script>
 					</div>
-
+					<div class="become_disciple_title">弟子福利8888</div>
+					<div class="become_disciple_cen_ids">
+						<script type="text/html" id="become_disciple_cen_ids">
+						<div class="become_disciple_cen">{{items.welfare}}</div>
+						</script>
+					</div>
+				
 				</div>
 			</div>
 			<div class="disciple_application_state">
