学堂--底部点击事件。。提问，提交后跳转

--- a/wechat/src/main/webapp/xcview/html/home_page.html
+++ b/wechat/src/main/webapp/xcview/html/home_page.html
@@ -515,23 +515,23 @@ onclick="common_jump_school({{item.watchState}},{{item.type}},{{item.collection?
 	<div class="footer_perch" style="1display: none;"></div>
 	<div class="footer" style="display: none1;">
 		<ul>
-			<li>
-				<a href="/xcview/html/physician/index.html" class="physician" style="width: 0.42rem;height: 0.42rem;background: url(/xcview/images/physicians_nav.png) no-repeat center;background-size: 0.42rem 0.42rem;margin-top: 0.14rem;"></a>
+			<li onclick="location.href ='/xcview/html/physician/index.html'">
+				<a href="javascript: ;" class="physician" style="width: 0.42rem;height: 0.42rem;background: url(/xcview/images/physicians_nav.png) no-repeat center;background-size: 0.42rem 0.42rem;margin-top: 0.14rem;" onclick="location.href ='/xcview/html/physician/index.html'"></a>
 				<p>中医师</p>
 			</li>
 			<li>
-				<a href="" class="footer_one" style="background: url(/xcview/images/school_ones.png) no-repeat center;background-size: 0.48rem 0.37rem;margin-top: 0.14rem;"></a>
+				<a href="javascript: ;" class="footer_one" style="background: url(/xcview/images/school_ones.png) no-repeat center;background-size: 0.48rem 0.37rem;margin-top: 0.14rem;"></a>
 				<p style="color: #00BC12;">学堂</p>
 			</li>
-			<li>
-				<a href="javascript:;" class="footer_two" onclick="go_study()" style="margin-top: 0.14rem;"></a>
+			<li onclick="go_study()">
+				<a href="javascript:;" class="footer_two" style="margin-top: 0.14rem;" onclick="go_study()"></a>
 				<p>学习</p>
 			</li>
-			<li>
+			<li onclick="location.href =/xcview/html/apprentice/apprentice.html'">
 				<a href="/xcview/html/apprentice/apprentice.html" class="footer_three" style="background-size: 0.42rem 0.42rem;height: 0.42rem;margin-bottom: 0.06rem;"></a>
 				<p>发现</p>
 			</li>
-			<li>
+			<li onclick="/xcview/html/my_homepage.html'">
 				<a href="/xcview/html/my_homepage.html" class="footer_four"></a>
 				<p>我的</p>
 			</li>
