--- a/wechat/src/main/webapp/xcview/html/physician/application_approved.html
+++ b/wechat/src/main/webapp/xcview/html/physician/application_approved.html
@@ -19,7 +19,7 @@
 	<header>
 		<div class="header">
 			<div class="return" onclick="location.href='/xcview/html/physician/physicians_page.html?doctor='+doctorId"><img src="/xcview/images/back%20icon.png" alt="" /></div>
-			<div class="apply_title">弟子申请成功</div>
+			<div class="apply_title">成为弟子申请</div>
 		</div>
 	</header>
 
