--- a/wechat/src/main/webapp/xcview/html/physician/index.html
+++ b/wechat/src/main/webapp/xcview/html/physician/index.html
@@ -35,6 +35,7 @@
 		/*padding: 0.2rem 0;*/
 		background: #fff;
 		margin-bottom: 0.2rem;
+		border-bottom: 1px solid #e6e6e6;
 	}
 	.swiper-container{
 		width: 6.98rem !important;
@@ -65,7 +66,7 @@
 </style>
 
 </head>
-<body style="background: #F8F8F8;">
+<body style="background: #F0f0f0;">
 	<!--头部搜索开始-->
 	<header>
 		<div class="header">
