--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -398,7 +398,7 @@
 </style>
 
 </head>
-<body style="background: #F8F8F8;">
+<body style="background: #F0f0f0;">
 	<div class="physicians_page_main comment_hide">
 		
 
@@ -1059,7 +1059,8 @@
 			<div class="QA_title">
 				<span class="border"></span>
 				<span style="font-size: 0.28rem;float: left;">老师解惑</span>
-				<div class="QA_quiz" onclick="location.href ='/xcview/html/physician/quiz.html?doctor=' + doctorId">
+				<!-- <div class="QA_quiz" onclick="location.href ='/xcview/html/physician/quiz.html?doctor=' + doctorId"> -->
+				<div class="QA_quiz">
 					<img src="/xcview/images/doubt.png" alt="" />
 					我要提问
 				</div>
