修改bug，部分查询增加是否是师承直播条件

--- a/wechat/src/main/webapp/xcview/html/physician/index.html
+++ b/wechat/src/main/webapp/xcview/html/physician/index.html
@@ -116,7 +116,7 @@
 		<div class="swiper-container top_swiper">
 			<div class="swiper-wrapper swiper-banner-btn">
 				{{each items as item i}}
-				<div class="swiper-slide pic01" onclick="{{item.target}}">
+				<div class="swiper-slide pic01">
 					<img src="{{item.imgPath}}" alt="" data_target="{{item.target}}" data_id="{{item.id}}" />
 				</div>
 				{{/each}}
@@ -124,7 +124,6 @@
 			<div class="swiper-pagination"></div>
 		</div>
 		<!-- 轮播结束 -->
-
 		</script>
 	</div>
 
