申请成功后我知道了--点击跳转。。申请页-时间点击修改。

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -1322,7 +1322,7 @@
 			<div class="order_tips_close">×</div>
 			<div class="order_tips_title">温馨提示</div>
 			<div class="order_tips_cen">只有弟子可预约远程诊疗，成为弟子才能开启权限哦~~</div>
-			<div class="order_tips_submit" onclick="location.href ='/xcview/html/physician/apply_for.html?doctor='+doctorId">在线弟子 申请加入~</div>
+			<div class="order_tips_submit" onclick="location.href ='/xcview/html/physician/apply_for.html?doctor='+doctorId">在线弟子 申请加入</div>
 		</div>
 	</div>
 
