--- a/wechat/src/main/webapp/xcview/html/physician/reserve_information.html
+++ b/wechat/src/main/webapp/xcview/html/physician/reserve_information.html
@@ -96,7 +96,7 @@
 				<!-- 开始对号先隐藏 -->
 				<script type="text/html" id="time_popout_main_ul_id">
 				{{each items as item i}} 
-				<li class="zhengliao_{{item.id}}"><span data-ids="{{item.id}}">{{item.dateText}}</span><img src="/xcview/images/pigeon.png" alt="" /></li>
+				<li class="zhengliao_{{item.id}}"><span data-ids="{{item.id}}">{{item.dateText}}</span><img src="/xcview/images/pigeon.png" alt="" class="zhengliao_img" /></li>
 				{{/each}}
 		        </script>
 			</ul>
