--- a/online-web/src/main/webapp/web/html/personal-center/personal-index.html
+++ b/online-web/src/main/webapp/web/html/personal-center/personal-index.html
@@ -186,7 +186,7 @@
 														{{/if}}
 													{{/if}}					
 														<div class="img">
-															<img src="{{item.smallimgPath}}"/>
+															<img src="{{item.smallimgPath}}?imageMogr2/thumbnail/!215x120r|imageMogr2/gravity/Center/crop/215x120"/>
 														</div>
 											
 														{{if item.type == 1}}
@@ -283,7 +283,7 @@
 														{{/if}}
 													{{/if}}
 														<div class="img">
-															<img src="{{item.smallImgPath}}">
+															<img src="{{item.smallImgPath}}?imageMogr2/thumbnail/!215x120r|imageMogr2/gravity/Center/crop/215x120">
 														</div>
 													
 														{{if item.type == 1}}
@@ -385,7 +385,7 @@
 														{{/if}}
 													{{/if}}	
 														<div class="img">
-															<img src="{{item.smallImgPath}}">
+															<img src="{{item.smallImgPath}}?imageMogr2/thumbnail/!215x120r|imageMogr2/gravity/Center/crop/215x120">
 														</div>
 														{{if item.type == 1}}
 															{{if item.collection == true}}
