倒计时添加圆角。中医师详情（跳转发现）-修改封面图大小

--- a/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
@@ -45,6 +45,7 @@
             background: #fff;
             font-size: 0.28rem;
             color: #F97B49;
+            border-radius: 2px;
         }
 
     </style>
