--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -1128,7 +1128,7 @@
 						<div class="become_disciple_cen">{{items.requirement}}</div>
 						</script>
 					</div>
-					<div class="become_disciple_title">弟子福利</div>
+					<div class="become_disciple_title" style="margin-top:0.1rem;">弟子福利</div>
 					<div class="become_disciple_cen_ids">
 						<script type="text/html" id="become_disciple_cen_ids">
 						<div class="become_disciple_cen">{{items.welfare}}</div>
