修改师承封面bug

--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -1574,7 +1574,7 @@
 							<div class="comment-see-modal pass-through" style="padding: 30px 0 50px 0;">
 								<span style="height: 3px;"></span>
 								<button class="adopt-disciple" type="button" data-apprentice="1">审核通过</button>
-								<button class="adopt-disciple not-adopt-disciple" type="button" data-apprentice="0">审核不通过</button>
+								<button class="adopt-disciple not-adopt-disciple" type="button" data-apprentice="0">拒绝</button>
 							</div>	
 						</div>
 					</div>
