中医师 主页-搜索-文字过多做限制。。详情页，点击师承显示内容。学堂、中医师-搜索页--增加返回按钮和搜索按钮

--- a/wechat/src/main/webapp/xcview/html/physician/search.html
+++ b/wechat/src/main/webapp/xcview/html/physician/search.html
@@ -38,6 +38,7 @@
 	<!--头部搜索开始-->
 	<header>
 		<div class="header">
+			<div class="return" onclick="physician()"><img src="/xcview/images/back icon.png"></div>
 			<div class="header_seek"> 
 				<input type="text" name="" value="" autocomplete="off"  id="header_input" />
 				<span class="span">
@@ -54,7 +55,7 @@
 					</span>
 				</div>
 			</div>
-			<div class="header_cancel" onclick="physician()">取消</div>
+			<div class="header_cancel">搜索</div>
 		</div>
 	</header>
 	<!--头部搜索结束-->
@@ -190,6 +191,31 @@
 				$(".header_seek_main").css("display","block");
 			};
 		});
+
+		// 点击搜索按钮
+		$(".header_cancel").click(function(){
+			var search_val=$("#header_input").val();
+			if($("#header_input").val() != ""){
+				$(".header_seek_main").css("display","none");
+				//头部input搜索框开始
+					initHistoryList();
+                        var keyValue = $('#header_input').val();
+                        //判断该记录是否已存在
+						if($.inArray(keyValue, arr)!=-1){
+                            removeByValue(arr, keyValue);
+                            arr.unshift($('#header_input').val());
+                            localStorage.setItem(hisArr,arr);
+                            window.location.href="/xcview/html/physician/physician_list.html?queryKey="+search_val+"&curriculum_blck=2";
+						}else{
+                            arr.unshift($('#header_input').val())
+                            localStorage.setItem(hisArr,arr);
+                            window.location.href="/xcview/html/physician/physician_list.html?queryKey="+search_val+"&curriculum_blck=2";
+						}
+			}else{
+				$(".header_seek_main").css("display","block");
+			};
+		});
+
 		//删除指定数组中的元素
         function removeByValue(arr, val) {
             for(var i=0; i<arr.length; i++) {
