[fix]医师重新认证完善，主播端修改信息（地址与医馆区分）

--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -881,7 +881,7 @@
 									<option value="">111</option>
 								</select>-->
 							<input type="text" id="hosPro" placeholder="医馆所在省份" disabled="disabled" />
-							<input type="text" id="hosCity" placeholder="医馆所在市区" />
+							<input type="text" id="hosCity" placeholder="医馆所在市区" disabled="disabled" />
 							<textarea readonly name="" id="detail_address" style="resize: none;display: block;" placeholder="医馆详细地址"></textarea>
 							<p class="warning hide">医馆地址不能为空</p>
 						</div>
@@ -2536,7 +2536,7 @@
 	<script src="/web/js/anchor/teaching.js?v=ipandatcm_1.2.1" type="text/javascript" charset="UTF-8"></script>
 	<script src="/web/js/common_msg.js" type="text/javascript" charset="UTF-8"></script>
 	<!--省市区三联动-->
-	<script src="/web/js/common/data.provinces2.js"></script>
+	<script src="/web/js/common/data.provinces.js"></script>
 	<script src="/web/js/common/provinces-selector.js"></script>
 	<!--省市区三联动-->
 	<script>
