--- a/online-web/src/main/webapp/web/html/anchors_resources3.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources3.html
@@ -130,7 +130,7 @@
 									<option value="">111</option>
 								</select>-->
 								<input type="text" id="hosPro" placeholder="医馆所在省份" disabled="disabled"/>
-								<input type="text" id="hosCity" placeholder="医馆所在市区"/>
+								<input type="text" id="hosCity" placeholder="医馆所在市区" disabled="disabled"/>
 								<textarea readonly name="" id="detail_address" style="resize: none;display: block;" placeholder="医馆详细地址"></textarea>
 								<p class="warning hide">医馆地址不能为空</p>
 							</div>
