--- a/online-web/src/main/webapp/web/html/personal-center/personal-index.html
+++ b/online-web/src/main/webapp/web/html/personal-center/personal-index.html
@@ -1272,7 +1272,7 @@
 		<script src="/web/html/preview-head/preview-head.js"></script>
 		<!--头像预览需要的JS-->
 		<!--省市区三联动-->
-		<script src="/web/js/common/data.provinces2.js"></script>
+		<script src="/web/js/common/data.provinces.js"></script>
 		<script src="/web/js/common/provinces-selector.js"></script>
 		<!--省市区三联动-->
 		
