--- a/online-web/src/main/webapp/web/html/ResidentHospital.html
+++ b/online-web/src/main/webapp/web/html/ResidentHospital.html
@@ -182,9 +182,7 @@
 									<div class="personIntroduct">
 										<span><em>*</em>  医馆介绍</span>
 										<!--<textarea name="" rows="" cols="" maxlength="500" placeholder="请输入500字以内医馆简介" style="resize: none;"></textarea>-->
-										<div style="display: inline-block;vertical-align: top;">
-											<script id="editor2" type="text/plain" style="width:540px;height:160px;"></script>
-										</div>
+										<div style="display: inline-block;vertical-align: top;"><script id="editor2" type="text/plain" style="width:540px;height:160px;"></script></div>
 
 
 										<p class="warning hide" style="padding-left: 0px;">医馆介绍不能为空</p>
@@ -216,17 +214,8 @@
 
 									<div class="doc_address">
 										<span><em>*</em>城市</span>
-										<select name="" id="choosePro" onchange="doProvAndCityRelation()">
-
-										</select>
-
-										<select name="" id="citys" onchange="doCityAndCountyRelation()">
-
-										</select>
-
-										<select name="" id="county" onchange="onchangeCountyEdit()">
-
-										</select>
+										<select class="province" id="choosePro" ></select>
+										<select class="city" id="citys"></select>
 										<p class="cityWarn warning hide" style="margin-left:110px;padding-left: 0px;">所在城市地址不能为空</p>
 										<textarea placeholder="请填写医馆详细信息" cols="" style="width: 500px;height: 90px;border: 1px solid #F0F0F0;padding: 10px;resize: none;margin: 20px 0px 0px 110px;outline: none;"></textarea>
 										<p class="detailWarn warning hide" style="margin-left:110px;padding-left: 0px;">所在城市地址不能为空</p>
@@ -441,9 +430,7 @@
 									<div class="personIntroduct">
 										<span><em>*</em>  医师介绍</span>
 										<!--<textarea name="" rows="" cols="" maxlength="500" placeholder="请输入500字以内医师介绍" style="resize: none;" class="doc_introduct"></textarea>-->
-										<div style="display: inline-block;vertical-align: top;">
-											<script id="editor" type="text/plain" style="width:540px;height:160px;"></script>
-										</div>
+										<div style="display: inline-block;vertical-align: top;"><script id="editor" type="text/plain" style="width:540px;height:160px;"></script></div>
 										<p class="warning hide" style="margin-left:110px;padding-left: 0px;">请输入医师介绍</p>
 									</div>
 
@@ -470,106 +457,6 @@
 											</tr>
 										</thead>
 										<tbody id="hosDocList">
-											<!--<tr>
-												<td>
-													<img src="/web/images/hospital/hospital_pic.png" alt="" />
-												</td>
-												<td>
-													施今墨
-												</td>
-
-												<td>
-													主任医师
-												</td>
-
-												<td>
-													胃病、针灸、养生食疗
-												</td>
-
-												<td>
-													上线
-												</td>
-
-												<td>
-													<a href="javascript:;" class="preview">预览</a>
-													<a href="javascript:;" class="downLine">下线</a>
-													<a href="javascript:;" class="edit">编辑</a>
-												</td>
-											</tr>
-											<tr>
-												<td>
-													<img src="/web/images/hospital/hospital_pic.png" alt="" />
-												</td>
-												<td>
-													施今墨
-												</td>
-
-												<td>
-													主任医师
-												</td>
-
-												<td>
-													胃病、针灸、养生食疗
-												</td>
-
-												<td>
-													上线
-												</td>
-
-												<td>
-													<a href="javascript:;">预览</a>
-													<a href="javascript:;">下线</a>
-													<a href="javascript:;">编辑</a>
-												</td>
-											</tr>
-											<tr>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-											</tr>
-											<tr>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-											</tr>
-											<tr>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-											</tr>
-											<tr>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-											</tr>
-											<tr>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-											</tr>
-											<tr>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-												<td></td>
-											</tr>-->
 										</tbody>
 									</table>
 
@@ -652,8 +539,7 @@
 														</td>
 													</tr>
 													{{/each}}
-													</script>
-												</tbody>
+													</script></tbody>
 											</table>
 										<!--无数据时的背景图-->
 										<div class="notice_notext_two">
@@ -682,17 +568,6 @@
 									</div>
 									<div class="recruit-newjob-experience">
 										<span>工作经验</span>
-										<!--<div class="recruit-select" id="nav">
-											<p class="recruit-select-one recruit-select-exp">请选择工作经验</p>
-											<ul class="recruit-select-lest">
-												<li data-number="0">不限</li>
-												<li data-number="1">0-1年</li>
-												<li data-number="2">1-3年</li>
-												<li data-number="3">3-5年</li>
-												<li data-number="4">5-10年</li>
-												<li data-number="5">10年以上</li>
-											</ul>
-										</div>-->
 									</div>
 									<div class="recruit-newjob-duty">
 										<span style="float: left;"><em>*</em>岗位职责</span>
@@ -750,8 +625,7 @@
 												<td>操作</td>
 											</tr>
 										</thead>
-										<tbody id="notice_tbody_wrap">
-											<script  type="text/template" id="notice_tbody">
+										<tbody id="notice_tbody_wrap"><script  type="text/template" id="notice_tbody">
 												{{each items as item i}}
 											<tr>
 												<td>
@@ -769,8 +643,7 @@
 												</td>
 											</tr>
 											{{/each}}
-											</script>
-										</tbody>
+											</script></tbody>
 									</table>
 									<!--无数据时的背景图-->
 									<div class="notice_notext_icon">
@@ -1179,13 +1052,14 @@
 			<!--<textarea name="" rows="" cols="" maxlength="500" placeholder="请输入500字以内医师介绍" style="resize: none;"></textarea>-->
 			<p id="myinf" style="max-width: 540px;max-height: 160;overflow: hidden;display: inline-block;vertical-align: top;font-size: 1px;">{{description}}</p>
 		</div>
-	
-		
-
-	
-
 </script>
-
+						</div>
+					</div>
+				</div>
+				</div>
+			</div>
+		</div>
+	</body>
 <script>
 	//实例化编辑器
 	//建议使用工厂方法getEditor创建和引用编辑器实例，如果在某个闭包下引用该编辑器，直接调用UE.getEditor('editor')就能拿到相关的实例
@@ -1308,7 +1182,8 @@
 <script type="text/javascript" src="/web/js/footer.js"></script>
 <script src="/web/js/placeHolder.js"></script>
 <script type="text/javascript" src="/web/js/cropbox.js"></script>
-<script src="/web/js/provinces.js"></script>
+<script src="/web/js/common/data.provinces.js"></script>
+<script src="/web/js/common/provinces-selector.js"></script>
 <script src="/web/js/ResidentHospital.js"></script>
 <script src="/web/js/hospitalAuthentication.js"></script>
 <script src="/web/js/hospitalAutdoc.js"></script>
