--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -1458,6 +1458,7 @@ $(window).bind("scroll", function() {
 			$(".prose_origin").show();   /*师承内容打开*/
 			$(".disciple_application_state").show();  //底部按钮显示
 			$(".minirefresh-totop").css("bottom","65px");  //返回按钮
+			$(".commonality_height").show();  /*公用高度*/
 		});
 
 		// 点击介绍
