招生简章变形问题处理，点击banner处理

--- a/wechat/src/main/webapp/xcview/html/apprentice/apprentice.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/apprentice.html
@@ -119,7 +119,9 @@
 								<li class="onclick_lis" data-ids="{{item.id}}" data-tokenStr="{{item.tokenStr}}">
 									<div class="apprentice_main">
 										<div class="flat_patternmaking">
-											<img src="{{item.coverImg}}" alt="封面" />
+											<div>
+												<img src="{{item.coverImg}}?imageMogr2/thumbnail/!698x396r|imageMogr2/gravity/Center/crop/698x396" alt="封面" />
+											</div>
 										</div>
 										<div class="main_title">{{item.title}}</div>
 									</div>
@@ -128,7 +130,7 @@
 							</script>
 
 							<!--<li onclick="location.href ='inherited_introduction.html'">-->
-								<!--<div class="apprentice_main">-->
+								<!--<div class="apprentice_main">-->  
 									<!--<div class="flat_patternmaking">-->
 										<!--<img src="http://test-file.ipandatcm.com/18522104635/936dd0d79046-2c9aec356231d035016231eb7b0b00001526957195438.png" alt="" />-->
 									<!--</div>-->
