--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -972,7 +972,7 @@
 			{{each items as item i}} 
 			<div class="prose_origin_details" data-ids="{{item.id}}">
 				<div class="prose_origin_details_center">
-					<img src="{{item.coverImg}}" alt="" />
+					<img src="{{item.coverImg}}?imageMogr2/thumbnail/!698x396r|imageMogr2/gravity/Center/crop/698x396" alt="" />
 					<div class="prose_origin_main_fize">
 						<div class="prose_origin_main_title">{{item.title}}</div>
 						<div class="prose_origin_main_time">{{item.createTime}}</div>
