--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -65,6 +65,7 @@
 	</head>
 
 	<body>
+		<!--<input type="file" id="ifile">-->
 	<script type="text/template" id="live_list_tpl">
 		{{each records as course i}}
 		<tr>
