--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -542,7 +542,7 @@
 								<li>
 									<div class="am-gallery-item">
 										<a href="{{pic.imgUrl}}" class="">
-											<img src="{{pic.imgUrl}}" />
+											<img src="{{pic.imgUrl}}?imageMogr2/thumbnail/!226x226r|imageMogr2/gravity/Center/crop/226x226" />
 										</a>
 									</div>
 								</li>
@@ -568,7 +568,7 @@
 					<div id="ccvideo{{item.id}}" data-id="{{item.id}}"class="comment_hide ccvideo">
 						
 					</div>
-					<img src="{{item.coverImg}}" class="ccvideo_img ccvideo{{item.id}}" />
+					<img src="{{item.coverImg}}?imageMogr2/thumbnail/!699x394r|imageMogr2/gravity/Center/crop/699x394" class="ccvideo_img ccvideo{{item.id}}" />
 					<div class="both"></div>
 				</div>
 				
@@ -579,7 +579,7 @@
 					</div>
 					{{if item.articleStatus == 1}}
 						<div class="article_nav_cen comment_hide">
-							<img src="{{item.articleImgPath}}" alt="" />
+							<img src="{{item.articleImgPath}}?imageMogr2/thumbnail/!249x140r|imageMogr2/gravity/Center/crop/249x140" alt="" />
 							<div class="article_nav_cen_size">{{item.articleTitle}}</div>
 						</div>
 					{{else}}
