--- a/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -720,7 +720,7 @@
 		<li data-name="menu=1-1">
 			<div class="link"><i class="glyphicon glyphicon-book left_range"></i>学堂<i class="fa fa-chevron-down"></i></div>
 			<ul class="submenu">
-				<li><a onclick="getCourseList()"  data-name="menu=1-1" href="javascript:;">课程</a></li>
+				<li><a onclick="getCourseList()"  data-name="menu=1-1" href="javascript:;" id="course_class">课程</a></li>
 				<li><a onclick="getZhuanjiList()" data-name="menu=1-2" href="javascript:;">专辑</a></li>
 				<li><a onclick="getLiveList()" data-name="menu=1-3" href="javascript:;">直播</a></li>	
 				<li><a data-name="menu=1-4" href="javascript:;">学员</a></li>
@@ -931,7 +931,7 @@
 					<div class="zhuanlan_bottom2 course_content" id="kecheng_bottom2" style="margin-bottom: 30px;">
 						<div class="zhuanlan_top">
 							<span class="title">课程</span>
-							<button class="button" onclick="resetCourseForm(true)">新课程</button>
+							<button class="button new_course" onclick="resetCourseForm(true)">新课程</button>
 						</div>
 					<hr style="margin-left: -30px;margin-right: -30px;margin-top: 0px !important;margin-bottom: 30px !important;color:#f0f0f0 !important;">
 						
@@ -1256,7 +1256,8 @@
 										</select>
 									</div>
 									<div class="add" onclick="addCourse2Collection()">确认添加</div>
-									<!--<div class="size">没有找到课程，新增课程</div>-->
+									<p class="warning course_null hide">添加集数不能大于总集数</p>
+									<div class="size">没有找到课程，新增课程</div>
 								</div>
 							</div>
 							<!--点击添加课程出现的弹框结束-->
@@ -2659,7 +2660,7 @@
 						<p class="warning return_warning4 hide">任职医馆不能为空</p>
 					</div>
 					<div class="name workTime" >
-						<span>坐诊时间</span>
+						<span><em>*</em>坐诊时间</span>
 						<!--<ul style="display: inline-block;vertical-align: middle;" id="u_workTime">
 							<li >一</li>
 							<li>二</li>
