--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -998,6 +998,7 @@
 				<script type="text/html" id="subscribe_id">
 				{{each items as item i}} 
 				<div class="subscribe">
+					<!--appointStatus: 0 -> 可预约 1->预约满 2->我的预约 infoId: 我的预约信息id-->
 					<div class="subscribe_time" data-id="{{item.id}}">{{item.indexDateText}}</div>
 					{{if item.appointStatus == 0}}
 						<div class="subscribe_btn" onclick="order('{{item.id}}')">可预约</div>
