隐藏--底部-没有更多数据

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -1415,6 +1415,7 @@ $(window).bind("scroll", function() {
 			$(".disciple_application_state").hide();  //底部按钮隐藏
 			$(".minirefresh-totop").css("bottom","30px");  //返回按钮
 			$(".commonality_height").hide();
+			$(".minirefresh-upwrap").show();  //底部没有数据--文字隐藏
 		});
 		$(".li_data").click();
 
@@ -1442,6 +1443,7 @@ $(window).bind("scroll", function() {
 			$(".disciple_application_state").hide();  //底部按钮隐藏
 			$(".minirefresh-totop").css("bottom","30px");  //返回按钮
 			$(".commonality_height").hide();
+			$(".minirefresh-upwrap").hide();  //底部没有数据--文字隐藏
 		});
 
 		// 点击师承
@@ -1467,6 +1469,7 @@ $(window).bind("scroll", function() {
 			$(".disciple_application_state").show();  //底部按钮显示
 			$(".minirefresh-totop").css("bottom","65px");  //返回按钮
 			$(".commonality_height").show();  /*公用高度*/
+			$(".minirefresh-upwrap").hide();  //底部没有数据--文字隐藏
 		});
 
 		// 点击介绍
@@ -1492,6 +1495,7 @@ $(window).bind("scroll", function() {
 			$(".disciple_application_state").hide();  //底部按钮隐藏
 			$(".minirefresh-totop").css("bottom","30px");  //返回按钮
 			$(".commonality_height").hide();
+			$(".minirefresh-upwrap").hide();  //底部没有数据--文字隐藏
 		});
 
 		// 点击显示全部动态筛选  
