处理医案和直播课--封面图裁剪

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -602,7 +602,7 @@
 					</div>
 					<div class="both"></div>
 					<div class="course_nav_cen comment_hide">
-						<img src="{{item.smallImgPath}}" alt="" />
+						<img src="{{item.smallImgPath}}?imageMogr2/thumbnail/!249x140r|imageMogr2/gravity/Center/crop/249x140" alt="" />
 						<div class="course_nav_cen_size">{{item.gradeName}}</div>
 						{{if item.currentPrice==0}}
 						<div class="course_nav_rate" style="color: #F97B49;">免费</div>
@@ -632,7 +632,7 @@
 					<div class="both"></div>
 					{{if item.articleStatus == 1}}
 					<div class="consilia_nav_cen" data-id="{{item.articleId}}" data-status="{{item.articleStatus}}" style="display: block;">
-							<img src="{{item.articleImgPath}}" alt="" />
+							<img src="{{item.articleImgPath}}?imageMogr2/thumbnail/!249x140r|imageMogr2/gravity/Center/crop/249x140" alt="" />
 							<div class="consilia_nav_cen_size">{{item.articleTitle}}</div>
 
 					</div>
