点击我的预约修改传值--id

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -1005,7 +1005,7 @@
 					{{else if item.appointStatus == 1}}
 						<div class="subscribe_btns">预约满</div>
 					{{else if item.appointStatus == 2}}
-						<div class="subscribe_btns" onclick="orders('{{item.id}}')" style="background: #F9BD2C;">我的预约</div>
+						<div class="subscribe_btns" onclick="orders('{{item.infoId}}')" style="background: #F9BD2C;">我的预约</div>
 					{{/if}}
 				</div>
 				{{/each}}
